[gd_scene load_steps=3 format=3 uid="uid://du4ubgqold64l"]

[ext_resource type="Script" path="res://Components/General/DamageNumber.gd" id="1_ags8s"]

[sub_resource type="LabelSettings" id="LabelSettings_xtmg6"]
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.580392)

[node name="DamageNumber" type="Node2D"]
script = ExtResource("1_ags8s")

[node name="DamageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.0
offset_right = 33.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Damage"
label_settings = SubResource("LabelSettings_xtmg6")
horizontal_alignment = 1

[node name="SuicideTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SuicideTimer" to="." method="_on_suicide_timer_timeout"]
